--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
